Bug 585791 - String.localeCompare with a null String object returns 0 (r=lhansen)